--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -64,7 +64,7 @@ $mainTransition : 'all 0.1s ease';
     .text {
         position: fixed;
 
-        margin-top: 25vh;
+        margin-top: 29vh;
         left: 5%;
         // transition: $mainTransition;
         // z-index: 125 ;
@@ -158,6 +158,7 @@ $mainTransition : 'all 0.1s ease';
     // margin-top: 100vh;
     // transform: translateY(-100vh);
     // background-color: red;
+    padding-top: 8vh !important;
 
 
     .bg {
