--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@
   border: none; }
   .section-main .text {
     position: fixed;
-    margin-top: 25vh;
+    margin-top: 29vh;
     left: 5%; }
     .section-main .text h1 {
       font-size: 0.7rem;
@@ -116,7 +116,8 @@
   padding-top: 4vh;
   border: 1px solid white;
   background-color: white;
-  z-index: 1; }
+  z-index: 1;
+  padding-top: 8vh !important; }
   .section-watercolor .bg {
     position: absolute;
     top: 0;
