--- a/css/section-main.css
+++ b/css/section-main.css
@@ -23,7 +23,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: white;
   z-index: 1;
   background-image: url("../images/4 (1).jpg");
@@ -63,7 +63,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: white;
   z-index: 1;
   position: absolute;
@@ -101,7 +101,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: white;
   z-index: 1;
   padding-top: 8vh !important; }
@@ -119,7 +119,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: white;
   z-index: 1; }
   .section-inc .bg2 {
@@ -135,7 +135,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: white;
   z-index: 1; }
   .section-pencil .bg1 {
@@ -154,7 +154,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: white;
   z-index: 1; }
   .section-sepia .bg {
@@ -175,7 +175,7 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: white;
   z-index: 1; }
   .section-acrylic .bg1 {
@@ -195,15 +195,56 @@
   min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid white;
+  border: 1px solid black;
   background-color: white;
   z-index: 1; }
-  .section-price .bg1 {
+  .section-price .slider {
+    width: 100%;
+    height: 50vh; }
+    .section-price .slider .slider-wrap {
+      width: 100%;
+      height: 100%;
+      background-color: pink;
+      position: relative; }
+      .section-price .slider .slider-wrap .slide {
+        position: absolute;
+        z-index: 0;
+        width: 100%;
+        height: 100%;
+        display: none; }
+        .section-price .slider .slider-wrap .slide img {
+          object-fit: cover; }
+  .section-price .calculator {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: start;
+    padding-top: 10px; }
+    .section-price .calculator .material input {
+      width: 20px;
+      height: 20px;
+      margin-top: 5px; }
+    .section-price .calculator .material label {
+      font-size: 0.8rem; }
+    .section-price .calculator .size input {
+      width: 20px;
+      height: 20px;
+      margin-top: 5px; }
+
+.section-contacts {
+  width: 100%;
+  min-height: 100vh !important;
+  min-height: -webkit-fill-available;
+  position: relative;
+  padding-top: 4vh;
+  border: 1px solid black;
+  background-color: white;
+  z-index: 1; }
+  .section-contacts .bg1 {
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: -1; }
-  .section-price .text {
+  .section-contacts .text {
     margin-top: 20vh; }
 
 .swiper-container {
