--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -36,7 +36,7 @@ $mainTransition : 'all 0.1s ease';
     // height: auto;
     position: relative;
     padding-top: 4vh;
-    border: 1px solid white;
+    border: 1px solid black;
     // border: none;
     background-color: white;
     z-index: 1;
@@ -285,8 +285,57 @@ $mainTransition : 'all 0.1s ease';
     }
 
 }
+.section-price{
+    @include section;
 
-.section-price {
+    .slider{
+        width: 100%;
+        height: 50vh;
+        .slider-wrap{
+            width: 100%;
+            height: 100%;
+            background-color: pink;
+            position: relative;
+            .slide{
+                position: absolute;
+                z-index: 0;
+                width: 100%;
+                height: 100%;
+                display: none;
+                img{
+                    object-fit: cover;
+                }
+            }
+            
+        }
+    }
+    .calculator{
+        display: flex;
+        justify-content:space-evenly;
+        align-items: start;
+        padding-top: 10px;
+        .material{
+            input{
+                width: 20px;
+                height: 20px;
+                margin-top: 5px;
+            }
+            label{
+                // margin-top: -10px;
+                font-size: 0.8rem;
+            }
+        }
+        .size{
+            input{
+                width: 20px;
+                height: 20px;
+                margin-top: 5px;
+            }
+        }
+    }
+}
+
+.section-contacts {
 
     @include section;
 
@@ -346,6 +395,11 @@ $mainTransition : 'all 0.1s ease';
     justify-content: space-evenly;
     align-items: center;
 }
+// .flex{
+//     display: flex;
+//     justify-content: space-evenly;
+//     align-items: start;
+// }
 
 @mixin reverce {
     display: flex;
