sliders remake, order btn

--- a/css/section-main.css
+++ b/css/section-main.css
@@ -20,13 +20,12 @@
 .section-main {
   width: 100%;
   min-height: 100vh !important;
-  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
   z-index: 1;
-  background-image: url("../images/4 (1).jpg");
+  background-image: url("../images/4 (1)small.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
@@ -56,14 +55,15 @@
       font-family: Sansation Light;
       font-style: normal;
       transition: "all 0.1s ease"; }
+    .section-main .text p.dt {
+      display: none; }
 
 .section-empty {
   width: 100%;
   min-height: 100vh !important;
-  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
   z-index: 1;
   position: absolute;
@@ -81,27 +81,54 @@
     font-size: 0.5rem;
     text-align: center;
     word-wrap: break-word; }
-  .section-text .btn {
-    width: 80%;
-    margin: auto;
-    padding: 5px 5px;
-    border-radius: 15px;
-    background-color: rgba(4, 124, 255, 0.5);
-    color: white;
-    margin-top: 10px;
+  .section-text .button-parent {
+    width: 100%;
+    text-align: center; }
+  .section-text a {
+    text-decoration: none;
+    font-weight: 500;
+    position: relative;
+    color: black;
+    display: inline-block; }
+  .section-text .btn-2 {
+    margin-top: 20px;
+    padding: 0.1rem 1.5rem;
+    border: 3px solid black;
+    transition: all 300ms ease;
+    box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    transition: all 0.5s ease; }
-  .section-text .btn:hover {
-    background-color: rgba(4, 124, 255, 0.8);
-    transition: all 0.5s ease; }
+    border-radius: 2px; }
+    .section-text .btn-2:before {
+      position: absolute;
+      content: '';
+      width: 0%;
+      height: 100%;
+      background: black;
+      top: 0;
+      left: auto;
+      right: 0;
+      z-index: -1;
+      transition: all 300ms ease; }
+    .section-text .btn-2:hover {
+      color: white;
+      box-shadow: none; }
+      .section-text .btn-2:hover:before {
+        position: absolute;
+        content: '';
+        width: 100%;
+        height: 100%;
+        background: black;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: -1; }
 
 .section-watercolor {
   width: 100%;
   min-height: 100vh !important;
-  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
   z-index: 1;
   padding-top: 8vh !important; }
@@ -116,10 +143,9 @@
 .section-inc {
   width: 100%;
   min-height: 100vh !important;
-  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-inc .bg2 {
@@ -132,10 +158,9 @@
 .section-pencil {
   width: 100%;
   min-height: 100vh !important;
-  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-pencil .bg1 {
@@ -145,16 +170,13 @@
     width: 80%;
     left: 0%;
     z-index: -1; }
-  .section-pencil .swiper-container {
-    margin-top: 10vh; }
 
 .section-sepia {
   width: 100%;
   min-height: 100vh !important;
-  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-sepia .bg {
@@ -172,10 +194,9 @@
 .section-acrylic {
   width: 100%;
   min-height: 100vh !important;
-  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-acrylic .bg1 {
@@ -192,51 +213,96 @@
 .section-price {
   width: 100%;
   min-height: 100vh !important;
-  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
-  z-index: 1; }
+  z-index: 1;
+  padding-left: 10%;
+  padding-right: 10%; }
+  .section-price .text p {
+    font-size: 0.6rem;
+    font-weight: 800; }
+  .section-price .section-price-first {
+    width: 100%;
+    height: 100%; }
+  .section-price .section-price-second {
+    width: 100%;
+    height: 100%; }
+  .section-price .h1 {
+    display: block; }
+  .section-price .h11 {
+    display: none; }
   .section-price .slider {
+    margin-top: 10px;
     width: 100%;
     height: 50vh; }
     .section-price .slider .slider-wrap {
       width: 100%;
       height: 100%;
-      background-color: pink;
       position: relative; }
       .section-price .slider .slider-wrap .slide {
         position: absolute;
         z-index: 0;
         width: 100%;
         height: 100%;
-        display: none; }
+        margin: auto;
+        opacity: 0;
+        transition: all 0.5s ease-in; }
         .section-price .slider .slider-wrap .slide img {
-          object-fit: cover; }
+          object-fit: contain;
+          width: 100%;
+          height: 100%; }
+      .section-price .slider .slider-wrap .slide.active {
+        opacity: 1;
+        transition: all 0.5s ease-in; }
   .section-price .calculator {
     display: flex;
     justify-content: space-evenly;
     align-items: start;
-    padding-top: 10px; }
+    padding-top: 10px;
+    position: relative; }
     .section-price .calculator .material input {
       width: 20px;
       height: 20px;
       margin-top: 5px; }
     .section-price .calculator .material label {
-      font-size: 0.8rem; }
-    .section-price .calculator .size input {
-      width: 20px;
-      height: 20px;
-      margin-top: 5px; }
+      font-size: 0.7rem; }
+    .section-price .calculator .size {
+      position: relative; }
+      .section-price .calculator .size input {
+        width: 20px;
+        height: 20px;
+        margin-top: 5px; }
+      .section-price .calculator .size label {
+        font-size: 0.7rem; }
+      .section-price .calculator .size p {
+        position: absolute;
+        width: auto;
+        height: 5vh;
+        margin-top: 7px;
+        font-size: 0.8rem; }
+        .section-price .calculator .size p span {
+          font-size: 0.8rem; }
+
+@media all and (min-width: 800px) {
+  .section-price {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center; }
+    .section-price .slider {
+      height: 70vh; }
+    .section-price .h1 {
+      display: none; }
+    .section-price .h11 {
+      display: block; } }
 
 .section-contacts {
   width: 100%;
   min-height: 100vh !important;
-  min-height: -webkit-fill-available;
   position: relative;
   padding-top: 4vh;
-  border: 1px solid black;
+  border: 1px solid white;
   background-color: white;
   z-index: 1; }
   .section-contacts .bg1 {
@@ -252,6 +318,11 @@
   margin-top: 3vh;
   margin-bottom: 50px;
   height: 55vh; }
+  .swiper-container .swiper-button-next::after,
+  .swiper-container .swiper-button-prev::after {
+    color: black; }
+  .swiper-container .swiper-pagination-bullet-active {
+    background-color: black; }
 
 .swiper-slide {
   width: auto !important;
@@ -276,14 +347,20 @@
   .text p {
     font-size: 0.5rem; }
   .section-main .text-main {
-    top: -10vh;
-    left: 5% !important; }
+    top: 10vh;
+    left: 15%; }
     .section-main .text-main h1 {
       font-size: 2.4rem !important; }
-    .section-main .text-main p {
-      font-size: 0.9rem !important; }
+    .section-main .text-main p.mobil {
+      font-size: 0.9rem !important;
+      display: none; }
+    .section-main .text-main p.dt {
+      font-size: 0.9rem !important;
+      display: block;
+      margin-top: 0%;
+      margin-left: 5%; }
   .section-main {
-    background-image: url("../images/main-big.jpg"); }
+    background-image: url("../images/bg/mainbig.jpg"); }
   .section.flex {
     display: flex;
     justify-content: space-evenly;
