--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,17 @@
 }
 
 body {
-  // overflow-x: hidden;
+  // overflow: hidden;
+  // background-color: red;
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;  
+}
+div{
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 
@@ -45,6 +55,7 @@ li {
 }
 
 .container {
+  // background-color: red;
   width: 100%;
   min-height: 100vh;
   // margin : auto;
