--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -137,26 +137,26 @@ $mainTransition : 'all 0.1s ease';
         // text-align: justify;
     }
 
-    // .btn {
-    //     width: 80%;
-    //     margin: auto;
-    //     padding: 5px 5px;
-    //     // height: 20%;
-    //     border-radius: 5px;
-    //     // background-color: rgba(4, 124, 255, 0.5);
-    //     // background-color: rgba(205, 67, 255, 0.555);
-    //     background-color: black;
-    //     color: white;
-    //     margin-top: 10px;
-    //     cursor: pointer;
-    //     transition: all 0.5s ease;
+    .btn {
+        width: 70%;
+        margin: auto;
+        padding: 5px 5px;
+        // height: 20%;
+        border-radius: 5px;
+        // background-color: rgba(4, 124, 255, 0.5);
+        // background-color: rgba(205, 67, 255, 0.555);
+        background-color: black;
+        color: white;
+        margin-top: 10px;
+        cursor: pointer;
+        transition: all 0.5s ease;
 
-    // }
+    }
 
-    // .btn:hover {
-    //     background-color: rgba(4, 124, 255, 0.8);
-    //     transition: all 0.5s ease;
-    // }
+    .btn:hover {
+        background-color: rgba(4, 124, 255, 0.8);
+        transition: all 0.5s ease;
+    }
 
     .button-parent {
         // max-width: 100px;
@@ -192,7 +192,7 @@ $mainTransition : 'all 0.1s ease';
         transition: all 300ms ease;
         box-shadow: 0px 4px 10px 2px rgba(black, 0.2);
         cursor: pointer;
-        border-radius: 2px;
+        border-radius: 20px;
         // background-color: #fff;
         // padding: 10px;
         
@@ -200,16 +200,19 @@ $mainTransition : 'all 0.1s ease';
         &:before{
           position: absolute;
           content: '';
-          width: 0%; height: 100%;
+          width: 0%; height: 90%;
           background: $primaryColor;
           top: 0;  left: auto; right: 0;
           z-index: -1;
           transition: all 300ms ease;
+          border-radius: 20px;
+        //   background-color: red;
         }
         
         &:hover{
           color: white; 
           box-shadow:none;
+          border-radius: 20px;
           &:before{
             position: absolute;
             content: '';
@@ -217,6 +220,7 @@ $mainTransition : 'all 0.1s ease';
             background: $primaryColor;
             top: 0; left: 0; right: 0;
             z-index: -1;
+            border-radius: 20px;
           }
         }
       }
@@ -239,6 +243,12 @@ $mainTransition : 'all 0.1s ease';
         width: 100%;
         object-fit: contain;
         z-index: -1;
+    }
+    @media all and (min-width: 800px){
+        .bg{
+            width: 100% !important;
+            height: 100vh ;
+        }
     }
 
 
@@ -618,8 +628,8 @@ $mainTransition : 'all 0.1s ease';
     .section-main {
         .text-main {
             // background-color: red;
-            top: 10vh;
-            left: 15% ;
+            top: -10vh;
+            left: 10% ;
 
             h1 {
                 font-size: 2.4rem !important;
@@ -641,19 +651,31 @@ $mainTransition : 'all 0.1s ease';
 
 
     .section-main {
-        background-image: url('../images/bg/mainbig.jpg');
+        background-image: url('../images/bg/mainbig2.jpg');
     }
 
     .section.flex {
         @include flex;
+        // align-items: start;
 
         img {
             width: 50%;
+            // background-color: red;
         }
 
         .text {
-            width: 40%;
-            // background-color: green;        
+            margin-top: -20vh;
+            width: 48%;
+            // background-color: green; 
+            h1{
+                // font-size: 1.2rem;
+                font-size: calc( (60vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+            }   
+            p{
+                font-size: calc( (30vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+                // font-size: 0.8rem;
+                font-weight: 100 ;
+            }    
         }
 
         .swiper-container {
