--- a/css/main.css
+++ b/css/main.css
@@ -97,16 +97,14 @@
   .section-text .btn {
     width: 70%;
     margin: auto;
-    padding: 5px 5px;
-    border-radius: 5px;
+    padding: 0.2rem 1.5rem;
+    border-radius: 20px;
     background-color: black;
     color: white;
-    margin-top: 10px;
+    margin-top: 20px;
     cursor: pointer;
-    transition: all 0.5s ease; }
-  .section-text .btn:hover {
-    background-color: rgba(4, 124, 255, 0.8);
-    transition: all 0.5s ease; }
+    transition: all 0.5s ease;
+    box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.5); }
   .section-text .button-parent {
     width: 100%;
     text-align: center; }
@@ -124,33 +122,6 @@
     box-shadow: 0px 4px 10px 2px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     border-radius: 20px; }
-    .section-text .btn-2:before {
-      position: absolute;
-      content: '';
-      width: 0%;
-      height: 90%;
-      background: black;
-      top: 0;
-      left: auto;
-      right: 0;
-      z-index: -1;
-      transition: all 300ms ease;
-      border-radius: 20px; }
-    .section-text .btn-2:hover {
-      color: white;
-      box-shadow: none;
-      border-radius: 20px; }
-      .section-text .btn-2:hover:before {
-        position: absolute;
-        content: '';
-        width: 100%;
-        height: 100%;
-        background: black;
-        top: 0;
-        left: 0;
-        right: 0;
-        z-index: -1;
-        border-radius: 20px; }
 
 .section-watercolor {
   width: 100%;
@@ -402,11 +373,11 @@
       width: 50%; }
     .section.flex .text {
       margin-top: -20vh;
-      width: 48%; }
+      width: 45%; }
       .section.flex .text h1 {
         font-size: calc( (60vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem); }
       .section.flex .text p {
-        font-size: calc( (30vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+        font-size: calc( (30vw - 30rem)/(50 - 30) * (1.5 - 1) + 1rem);
         font-weight: 100; }
     .section.flex .swiper-container {
       width: 50%;
