--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -140,23 +140,25 @@ $mainTransition : 'all 0.1s ease';
     .btn {
         width: 70%;
         margin: auto;
-        padding: 5px 5px;
+        // padding: 5px 45px;
+        padding: 0.2rem 1.5rem;
         // height: 20%;
-        border-radius: 5px;
+        border-radius: 20px;
         // background-color: rgba(4, 124, 255, 0.5);
         // background-color: rgba(205, 67, 255, 0.555);
         background-color: black;
         color: white;
-        margin-top: 10px;
+        margin-top: 20px;
         cursor: pointer;
         transition: all 0.5s ease;
+        box-shadow: 0px 4px 10px 2px rgba(black, 0.5);
 
     }
 
-    .btn:hover {
-        background-color: rgba(4, 124, 255, 0.8);
-        transition: all 0.5s ease;
-    }
+    // .btn:hover {
+    //     background-color: rgba(4, 124, 255, 0.8);
+    //     transition: all 0.5s ease;
+    // }
 
     .button-parent {
         // max-width: 100px;
@@ -197,32 +199,32 @@ $mainTransition : 'all 0.1s ease';
         // padding: 10px;
         
        
-        &:before{
-          position: absolute;
-          content: '';
-          width: 0%; height: 90%;
-          background: $primaryColor;
-          top: 0;  left: auto; right: 0;
-          z-index: -1;
-          transition: all 300ms ease;
-          border-radius: 20px;
-        //   background-color: red;
-        }
+        // &:before{
+        //   position: absolute;
+        //   content: '';
+        //   width: 0%; height: 90%;
+        //   background: $primaryColor;
+        //   top: 0;  left: auto; right: 0;
+        //   z-index: -1;
+        //   transition: all 300ms ease;
+        //   border-radius: 20px;
+        // //   background-color: red;
+        // }
         
-        &:hover{
-          color: white; 
-          box-shadow:none;
-          border-radius: 20px;
-          &:before{
-            position: absolute;
-            content: '';
-            width: 100%; height: 100%;
-            background: $primaryColor;
-            top: 0; left: 0; right: 0;
-            z-index: -1;
-            border-radius: 20px;
-          }
-        }
+        // &:hover{
+        //   color: white; 
+        //   box-shadow:none;
+        //   border-radius: 20px;
+        //   &:before{
+        //     position: absolute;
+        //     content: '';
+        //     width: 100%; height: 100%;
+        //     background: $primaryColor;
+        //     top: 0; left: 0; right: 0;
+        //     z-index: -1;
+        //     border-radius: 20px;
+        //   }
+        // }
       }
 }
 
@@ -665,14 +667,14 @@ $mainTransition : 'all 0.1s ease';
 
         .text {
             margin-top: -20vh;
-            width: 48%;
+            width: 45%;
             // background-color: green; 
             h1{
                 // font-size: 1.2rem;
                 font-size: calc( (60vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
             }   
             p{
-                font-size: calc( (30vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+                font-size: calc( (30vw - 30rem)/(50 - 30) * (1.5 - 1) + 1rem);
                 // font-size: 0.8rem;
                 font-weight: 100 ;
             }    
