--- a/scss/section-main.scss
+++ b/scss/section-main.scss
@@ -95,7 +95,8 @@ $mainTransition : 'all 0.1s ease';
             font-style: normal;
             transition: $mainTransition;
         }
-        p.dt{
+
+        p.dt {
             display: none;
         }
 
@@ -155,10 +156,13 @@ $mainTransition : 'all 0.1s ease';
 
     }
 
-    // .btn:hover {
-    //     background-color: rgba(4, 124, 255, 0.8);
-    //     transition: all 0.5s ease;
-    // }
+    .btn:hover {
+        // background-color: rgba(4, 124, 255, 0.8);
+        -webkit-box-shadow: 1px 9px 24px 23px rgba(34, 60, 80, 0.16);
+        -moz-box-shadow: 1px 9px 24px 23px rgba(34, 60, 80, 0.16);
+        box-shadow: 1px 9px 24px 23px rgba(34, 60, 80, 0.16);
+        transition: all 0.5s ease;
+    }
 
     .button-parent {
         // max-width: 100px;
@@ -186,8 +190,8 @@ $mainTransition : 'all 0.1s ease';
 
     // button 4
     $primaryColor : black;
- 
-    .btn-2{
+
+    .btn-2 {
         margin-top: 20px;
         padding: 0.1rem 1.5rem;
         border: 3px solid $primaryColor;
@@ -197,8 +201,8 @@ $mainTransition : 'all 0.1s ease';
         border-radius: 20px;
         // background-color: #fff;
         // padding: 10px;
-        
-       
+
+
         // &:before{
         //   position: absolute;
         //   content: '';
@@ -210,7 +214,7 @@ $mainTransition : 'all 0.1s ease';
         //   border-radius: 20px;
         // //   background-color: red;
         // }
-        
+
         // &:hover{
         //   color: white; 
         //   box-shadow:none;
@@ -225,7 +229,7 @@ $mainTransition : 'all 0.1s ease';
         //     border-radius: 20px;
         //   }
         // }
-      }
+    }
 }
 
 .section-watercolor {
@@ -246,10 +250,11 @@ $mainTransition : 'all 0.1s ease';
         object-fit: contain;
         z-index: -1;
     }
-    @media all and (min-width: 800px){
-        .bg{
+
+    @media all and (min-width: 800px) {
+        .bg {
             width: 100% !important;
-            height: 100vh ;
+            height: 100vh;
         }
     }
 
@@ -392,10 +397,12 @@ $mainTransition : 'all 0.1s ease';
         width: 100%;
         height: 100%;
     }
-    .h1{
+
+    .h1 {
         display: block;
     }
-    .h11{
+
+    .h11 {
         display: none;
     }
 
@@ -482,9 +489,12 @@ $mainTransition : 'all 0.1s ease';
                 margin-top: 7px;
                 // background-color: red;
                 font-size: 0.8rem;
+                font-weight: bold;
 
                 span {
                     font-size: 0.8rem;
+                    font-weight: bold;
+                    color: rgb(34, 18, 18);
                 }
             }
         }
@@ -500,15 +510,17 @@ $mainTransition : 'all 0.1s ease';
         .slider {
             height: 70vh;
         }
+
         // .calculator{
         //     h1{
         //         color: red;
         //     }
         // }
-        .h1{
+        .h1 {
             display: none;
         }
-        .h11{
+
+        .h11 {
             display: block;
         }
     }
@@ -631,17 +643,18 @@ $mainTransition : 'all 0.1s ease';
         .text-main {
             // background-color: red;
             top: -10vh;
-            left: 10% ;
+            left: 10%;
 
             h1 {
                 font-size: 2.4rem !important;
             }
 
-            p.mobil{
+            p.mobil {
                 font-size: 0.9rem !important;
                 display: none;
             }
-            p.dt{
+
+            p.dt {
                 font-size: 0.9rem !important;
                 display: block;
                 margin-top: 0%;
@@ -668,16 +681,18 @@ $mainTransition : 'all 0.1s ease';
         .text {
             margin-top: -20vh;
             width: 45%;
+
             // background-color: green; 
-            h1{
+            h1 {
                 // font-size: 1.2rem;
-                font-size: calc( (60vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
-            }   
-            p{
-                font-size: calc( (30vw - 30rem)/(50 - 30) * (1.5 - 1) + 1rem);
+                font-size: calc((60vw - 30rem)/(80 - 30) * (1.5 - 1) + 1rem);
+            }
+
+            p {
+                font-size: calc((30vw - 30rem)/(50 - 30) * (1.5 - 1) + 1rem);
                 // font-size: 0.8rem;
-                font-weight: 100 ;
-            }    
+                font-weight: 100;
+            }
         }
 
         .swiper-container {
